

syntax ="proto3" ;

package  presence;
option go_package = "contract/golang/presence";

message GetPresenceRequest {
 repeated uint64 user_ids  =1;

}


message GetPresenceResponse {
  repeated GetPresenceItem  items =1;

}

message GetPresenceItem {
   uint64 user_ids  =1;
   int64  timestamp =2;
}


service  GetPresenceService{
  rpc GetPresence(GetPresenceRequest)  returns  (GetPresenceResponse);
}